<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ToolDetail">

        <TextView
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obligatory_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/product_name_textview" />

            <EditText
                android:id="@+id/product_name_edittext"
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fill_the_name_edittext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/price_textview" />

            <EditText
                android:id="@+id/price_edittext"
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fill_the_price_edittext"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/quantity_textview" />

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_minus"
                    style="@style/item"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="–" />

                <EditText
                    android:id="@+id/quantity_edittext"
                    style="@style/item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity_edittext"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_plus"
                    style="@style/item"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/item"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional_data_textview" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/supplier_textview" />

            <EditText
                android:id="@+id/supp_name_edittext"
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name_of_company_edittext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:text="@string/supplier_contact_textview" />

            <EditText
                android:id="@+id/supp_phone_number_edittext"
                style="@style/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone_number_edittext"
                android:inputType="phone" />

        </LinearLayout>

        <Button
            android:id="@+id/call_to_supp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_to_supplier" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/top_bottom_big"
        android:layout_marginEnd="@dimen/start_end_big"
        app:srcCompat="@drawable/ic_save" />
</RelativeLayout>